Changes in Shorewall 4.4.11

1)  Apply patch from Gabriel.

2)  Fix IPSET match detection when a pathname is specified for IPSET.

3)  Fix start priority of shorewall-init on Debian

4)  Make IPv6 log and connections output readable.

5)  Add REQUIRE_INTERFACE to shorewall*.conf

6)  Avoid run-time warnings when options are not listed in shorewall.conf.

Changes in Shorewall 4.4.10

1)  Fix regression with scripts.

2)  Log startup errors.

3)  Implement Shorewall-init.

4)  Add SAFESTOP option to /etc/default/shorewall*

5)  Restore -a functionality to the version command.

6)  Correct Optimization issue

7)  Rename PREFIX to DESTDIR in install scripts

8)  Correct handling of optional/required interfaces with wildcard names.

Changes in Shorewall 4.4.9

1)  Auto-detection of bridges.

2)  Correct handling of a logical interface name in the EXTERNAL column
    of proxyarp.

3)  More robust 'trace'.

4)  Added IPv6 mDNS macro.

5)  Fix find_first_interface_address() error reporting.

6)  Fix propagation of zero-valued config variables.

7)  Fix OPTIMIZE 4 bug.

8)  Deallocate unused rules.

9)  Keep rule arrays compressed during optimization.

10) Remove remaining fallback scripts.

11) Rationalize startup logs.

12) Optimize 8.

13) Don't create output chains for BPORT zones.

14) Implement 'show log ip-addr' in /sbin/shorewall and
    /sbin/shorewall-lite/

15) Restore lone ACCEPT rule to the OUTPUT chain under OPTIMIZE 2.

16) Change chain policy on OUTPUT chain with lone ACCEPT rule.

17) Set IP before sourcing the params file.

18) Fix rare optimization bug.

19) Allow definition of an addressless bridge without a zone.

20) In the routestopped file, assume 'routeback' if the interface has
    'routeback'.

21) Make Shorewall and Shorewall6 installable on OS X.

Changes in Shorewall 4.4.8

1)  Correct handling of RATE LIMIT on NAT rules.

2)  Don't create a logging chain for rules with '-j RETURN'.

3)  Avoid duplicate SFQ class numbers.
