@@ -57,11 +57,9 @@
           <row>
             <entry></entry>
 
-            <entry><ulink url="KVM.html">KVM (Kernel-mode Virtual
-            Machine)</ulink></entry>
+            <entry><ulink url="Vserver.html">Linux-vserver</ulink></entry>
 
-            <entry><ulink url="Laptop.html">Shorewall on a
-            Laptop</ulink></entry>
+            <entry></entry>
           </row>
 
           <row>
@@ -187,7 +185,7 @@
 
             <entry><ulink url="netmap.html">Network Mapping</ulink></entry>
 
-            <entry> <ulink url="simple_traffic_shaping.html">Traffic
+            <entry><ulink url="simple_traffic_shaping.html">Traffic
             Shaping/QOS - Simple</ulink></entry>
           </row>
 
@@ -383,6 +381,16 @@
 
             <entry><ulink url="CompiledPrograms.html#Lite">Shorewall
             Lite</ulink></entry>
+
+            <entry></entry>
+          </row>
+
+          <row>
+            <entry><ulink url="KVM.html">KVM (Kernel-mode Virtual
+            Machine)</ulink></entry>
+
+            <entry><ulink url="Laptop.html">Shorewall on a
+            Laptop</ulink></entry>
 
             <entry></entry>
           </row>
