@@ -169,6 +169,17 @@ c:a,b     ipv4</programlisting>
                 single bridge.</para>
               </listitem>
             </varlistentry>
+
+            <varlistentry>
+              <term><emphasis role="bold">vserver</emphasis></term>
+
+              <listitem>
+                <para>Added in Shorewall 4.4.11 Beta 2 - A zone composed of
+                Linux-vserver guests. The zone contents must be defined in
+                <ulink url="shorewall-hosts.html">shorewall-hosts</ulink>
+                (5).</para>
+              </listitem>
+            </varlistentry>
           </variablelist>
         </listitem>
       </varlistentry>
