@@ -10,7 +10,10 @@ Changes in Shorewall 4.4.11
 
 5)  Add REQUIRE_INTERFACE to shorewall*.conf
 
-6)  Avoid run-time warnings when options are not listed in shorewall.conf.
+6)  Avoid run-time warnings when options are not listed in
+    shorewall.conf.
+
+7)  Implement Vserver zones.
 
 Changes in Shorewall 4.4.10
 
